--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -1,20 +1,22 @@
-.contact article {
+.contact section {
   display: flex;
   justify-content: center;  
   align-items: center;
-  flex-wrap: wrap;
+
 }
 
-.contact div {
+.contact article {
   display: flex;
-  justify-content: flex-start;
-  padding: 10px 10px 0 10px;
-
+  justify-content:space-evenly; 
+  align-items: center;
+  width: 25%;
+  flex-wrap: wrap;
 }
 
 .contact h1 {
   text-align: center;
   font-size: 2em;
+  padding: 0 0 10px 0;
 }
 
 .contact h6 {
@@ -25,7 +27,22 @@
 
 .contact p {
   padding: 0 0 0 10px;
-  font-size: 1.75em;
+  font-size: 1.5em;
   color: gray;
-  text-align: center;
+  text-align: left;
+  margin: 0;
+  width: fit-content;
 }
+
+.contact span {
+  display: flex;
+  flex-direction: row;
+  justify-items: flex-start;
+  width: 40%;
+}
+
+/* a:visited {
+  color: white;
+  text-shadow: white 3px 0 10px;
+  font-weight: 500;
+} */
