--- a/src/pages/Experience/Experience.module.css
+++ b/src/pages/Experience/Experience.module.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: baseline;
-  width: 80%;
+  width: 100%;
 }
 
 .experience span {
