--- a/src/pages/ProjectDetail/ProjectDetail.module.css
+++ b/src/pages/ProjectDetail/ProjectDetail.module.css
@@ -1,3 +1,20 @@
-section {
+.ProjectDetail section, img, p {
   width: 50%;
+
+}
+
+/* img, p, ul{
+  width: 40%;
+} */
+
+.ProjectDetail ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 0;
+}
+
+.ProjectDetail li {
+  padding: 0 20px;
 }
